[tool.poetry]
name = "adventure"
version = "0.1.0"
description = "A simple text adventure game and engine"
authors = ["Scott Meeuwsen <scott@apisw.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
asyncssh = "^2.5.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.2"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
